--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   google_fonts: ^6.2.1
   get: ^4.6.6
   get_storage: ^2.1.1
+  bottom_drawer: ^0.0.5
 
 dev_dependencies:
   flutter_test:
