--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   get_storage: ^2.1.1
   bottom_drawer: ^0.0.5
   window_manager: ^0.3.9
+  dropdown_button2: ^2.3.9
 
 dev_dependencies:
   flutter_test:
