--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,9 @@ dependencies:
   bottom_drawer: ^0.0.5
   window_manager: ^0.3.9
   dropdown_button2: ^2.3.9
+  calendar_date_picker2: ^1.1.5
+  month_year_picker: ^0.4.0+1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
